test: openapi-generator about typia
