# openapi/codegen/model/updateUserDto.ts
@@ -1,15 +1,12 @@
-import { IsString, IsNumber, IsBoolean, IsOptional, IsNotEmpty } from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
+import { tags } from "typia";
 
-export class UpdateUserDto {
-    @ApiProperty()
-    @IsOptional()
-    @IsString()
+export interface UpdateUserDto { 
+    
     email?: string;
-
-    @ApiProperty()
-    @IsOptional()
-    @IsString()
+    
     password?: string;
-
+    /** 유저 상태 업데이트 */
+    status?: string;
 }
+export type StatusEnum = "active" | "inactive" | "suspended" | ;
+
